# energy-time-fairness

./: .gitmodules  CMakeLists.txt  README.md
cmake/: config.cmake  grpc.cmake
efair/example/: example.cpp  run_client.cpp  run_server.cpp
efair/executor/: executor.cpp  executor.h
efair/profiler/: profile_dnn.cpp
efair/proto/: efair.proto
efair/rpc/: client.cpp  client.h  server.cpp  server.h
efair/scheduler/: scheduler.cpp  scheduler.h
efair/test/: test.cpp
efair/util/: chfreq.cpp  chfreq.h  common.h
models/resnet18/: resnet18_profile.json
models/resnet50/: resnet50_profile.json
samples/: image_chihuahua.bytes
